--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <h1>Ask Something to AI</h1>
+        <h1>Ask Something to Shri Guru Granth Sahib</h1>
         <input type="text" id="userInput" placeholder="Type your question here...">
         <br>
         <button onclick="sendToBackend()">Submit</button>
